[package]
name = "narwhal-mode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
reth.workspace = true
reth-chainspec.workspace = true
reth-evm-ethereum.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-primitives.workspace = true
reth-node-ethereum = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true

eyre.workspace = true
tokio.workspace = true
serde_json.workspace = true